RESOLVED FIXED 229708
[SOUP] Assertion in startObservingCookieChanges()
https://bugs.webkit.org/show_bug.cgi?id=229708
Summary [SOUP] Assertion in startObservingCookieChanges()
Carlos Garcia Campos
Reported 2021-08-31 04:24:12 PDT
For some reason we don't implement startObservingCookieChanges() and stopObservingCookieChanges() for soup, and we set the observer callback from the network session constructor/destructor.
Attachments
Patch (7.58 KB, patch)
2021-08-31 04:27 PDT, Carlos Garcia Campos
pnormand: review+
Patch for landing (7.53 KB, patch)
2021-08-31 04:40 PDT, Carlos Garcia Campos
no flags
Carlos Garcia Campos
Comment 1 2021-08-31 04:27:17 PDT
Carlos Garcia Campos
Comment 2 2021-08-31 04:40:17 PDT
Created attachment 436874 [details] Patch for landing
EWS
Comment 3 2021-08-31 07:19:37 PDT
Committed r281801 (241138@main): <https://commits.webkit.org/241138@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 436874 [details].
Radar WebKit Bug Importer
Comment 4 2021-08-31 07:20:20 PDT
Note You need to log in before you can comment on or make changes to this bug.