[SOUP] Assertion in startObservingCookieChanges() https://bugs.webkit.org/show_bug.cgi?id=229708

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2021-08-31
Reviewed by Philippe Normand.

Source/WebCore:

Add an implementation for startObservingCookieChanges() and stopObservingCookieChanges() setting the cookies
observer callback on the given storage session.

* platform/network/CookieStorage.h:
* platform/network/cf/CookieStorageCFNet.cpp:
(WebCore::startObservingCookieChanges):
(WebCore::stopObservingCookieChanges):
* platform/network/curl/CookieStorageCurl.cpp:
(WebCore::startObservingCookieChanges):
(WebCore::stopObservingCookieChanges):
* platform/network/mac/CookieStorageMac.mm:
(WebCore::startObservingCookieChanges):
(WebCore::stopObservingCookieChanges):
* platform/network/soup/CookieStorageSoup.cpp:
(WebCore::startObservingCookieChanges):
(WebCore::stopObservingCookieChanges):

Source/WebKit:

Do not observe cookies changes unconditionally on session creation/destruction.

* NetworkProcess/soup/NetworkSessionSoup.cpp:
(WebKit::NetworkSessionSoup::NetworkSessionSoup):
(WebKit::NetworkSessionSoup::~NetworkSessionSoup):

Canonical link: https://commits.webkit.org/241138@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281801 268f45cc-cd09-0410-ab3c-d52691b4dbfc